--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <title> Link Tag with href</title>
+    </head>
+    <body>
+        <header><a href="https://flatironschool.com">Flatiron School</a></header>
+    </body>
+</html>
